--- a/policies/values.yaml
+++ b/policies/values.yaml
@@ -1,7 +1,8 @@
-# Default values for helm-test.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Declare include & exclude namespace data that needs to be passed into your templates.
 
+
+# includeNamespaces - If not specificed, by default the policy will be applied to all namespaces
+# excludeNamespaces - This is important to make sure we don't kill sensitive infrastructure
 RequireLabels:
   # includeNamespaces:
   #   - loki
