Updates values. Create scripts to populate data Desgins scenario for demonstration Updates README with proper instructions Uploads binaries

--- a/policies/values.yaml
+++ b/policies/values.yaml
@@ -7,11 +7,17 @@ RequireLabels:
   # includeNamespaces:
   #   - loki
   excludeNamespaces:
-    # - lala
-    - kyverno
-    - default
-    - local-path-storage
     - kube-system
+    - kyverno
+    - local-path-storage
+    - ironman
+    - vision
+    - spider-man
+    - captain-america
+    - ant-man
+    - hawk-eye
+    - gswarm-critical
+    - gswarm-lambda
   resources:
     - Pod
   key: aaaaaaaaowner
